--- a/src/AppSandboxMaui/TestView.xaml
+++ b/src/AppSandboxMaui/TestView.xaml
@@ -3,5 +3,5 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppSandboxMaui.TestView">
-    <Label Text="{Binding .}"/>
+    <Label x:Name="TestLabel" Text="{Binding .}"/>
 </ContentView>
